--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^13.8.0",
-    "eslint": "^8.17.0"
+    "eslint": "^8.17.0",
+    "mongodb": "^4.7.0"
   },
   "devDependencies": {
     "axios": "^0.27.2"
